# pyronounce

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  uv.toml
examples/: basic_usage.py
pyronounce/: __init__.py  cli.py  core.py  model.py  utils.py
pyronounce/data/: README.md  default_model.pkl
tests/: test_basic.py
